--- a/src/styles/issueindex.css
+++ b/src/styles/issueindex.css
@@ -8,6 +8,10 @@
     --red: #e44057;
     --background-red: rgba(228,64,87,.15);;
 }
+.issues-list-container {
+    max-height: 500px; /* Ajusta la altura máxima según tus necesidades */
+    overflow-y: auto; /* Agrega desplazamiento vertical si el contenido excede el tamaño máximo */
+  }
 
 main{
     height: 100%;   
